--- a/FittingAllCSS.css
+++ b/FittingAllCSS.css
@@ -112,6 +112,7 @@ h1 {
     }
 
     #functAns {
+        font-family: Arial, Helvetica, sans-serif;
         font-size: 1.5em;
         padding-top: 20px;
         padding-left: 0px;
