--- a/FittingAllCSS.css
+++ b/FittingAllCSS.css
@@ -22,14 +22,12 @@ body {
 h1 {
     font-size: 3em;
     padding: 10px;
-    font-family: Arial, Helvetica, sans-serif;
     margin: auto;
     margin-bottom: 30px;
 }
 
 .dropDown {
     font-size: 1.6em;
-    font-family: Arial, Helvetica, sans-serif;
     padding: 10px;
 }
 
@@ -63,20 +61,19 @@ h1 {
     width: 300px;
 }
 
-.answer {
+#ans {
     font-size: 1.6em;
     padding: 10px;
 }
 
 #functAns {
-    font-size: 2em;
+    font-size: 3em;
     padding: 40px;
 }
 
 @media only screen and (max-width: 480px) {
     html {
         background-color: white;
-        font-family: Arial, Helvetica, sans-serif;
     }
     body{
         background-color: white;
@@ -114,7 +111,7 @@ h1 {
 
     #functAns {
         font-size: 1.5em;
-        padding-top: 20px;
-        padding-left: 0px;
+        padding-top: 1px;
+        padding: 0px;
     }
 }
