--- a/FittingAllCSS.css
+++ b/FittingAllCSS.css
@@ -1,21 +1,19 @@
 @charset "utf-8";
 
 html {
+    background-image: (url="asfalt-dark.png");
+    background-repeat: repeat;
     background: rgb(47, 80, 115);
     font-family: Arial, Helvetica, sans-serif;
 }
   
 body {
-    box-shadow: 5px 5px 10px;
-    max-width: 700px;
-    height: 560px;
-    border-radius: 20px;
+    box-shadow: 5px 0px 10px, -5px 0px 10px;
+    max-width: auto;
     text-align: center;
     margin-top: 30px;
     margin-bottom: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    background: white;
+    background: rgba(255, 255, 255, 0.5);
     padding: 50px;
 }
 
