--- a/FittingAllCSS.css
+++ b/FittingAllCSS.css
@@ -1,50 +1,51 @@
 @charset "utf-8";
 
 html {
-    background-image: (url="asfalt-dark.png");
-    background-repeat: repeat;
-    background: rgb(47, 80, 115);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Courier New", Courier, monospace;
 }
   
 body {
-    box-shadow: 5px 0px 10px, -5px 0px 10px;
-    max-width: auto;
+    width: auto;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    background: rgba(255, 255, 255, 0.5);
     padding: 50px;
+    color: black;
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 2.5em;
+    font-weight: bold;
     padding: 10px;
     margin: auto;
     margin-bottom: 30px;
 }
 
 .dropDown {
-    font-size: 1.6em;
+    font-size: 1.3em;
+    font-weight: bold;
     padding: 10px;
+    width: 350px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .input{
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    padding:9px;
+    text-align: left;
+    padding-top:9px;
+    padding-bottom: 9px;
 }
 
 .sel {
     background-color: #ffffff;
     padding: 8px;
     color: black;
-    font-size: 16px;
+    font-family: "Courier New", Courier, monospace;
+    font-size: 14px;
+    font-weight: bold;
     border-color: black;
     border-style: solid;
-    border-radius: 20px;
+    border-radius: 5px;
 }
 
 #ansButton {
@@ -53,20 +54,22 @@ h1 {
     font-size: 16px;
     border-style: solid;
     border-color: black;
-    border-radius: 20px;
+    font-family: "Courier New", Courier, monospace;
+    font-weight: bold;
+    border-radius: 5px;
     padding: 15px;
     margin: 20px;
-    width: 300px;
-}
-
-#ans {
-    font-size: 1.6em;
-    padding: 10px;
+    width: 350px;
 }
 
 #functAns {
+    display: block;
     font-size: 3em;
+    font-weight: bold;
     padding: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
 }
 
 @media only screen and (max-width: 480px) {
@@ -94,21 +97,17 @@ h1 {
     }
 
     .input{
-        width: 300px;
         text-align: left;
-        padding:9px;
     }
 
     #ansButton {
-        width: 200px;
-    }
-
-    #ans {
-        font-size: 1em;
+        width: 300px;
+        margin-left: 0;
     }
 
     #functAns {
-        font-size: 1.5em;
+        font-size: 3em;
         padding: 10px;
+        margin-left: 0;
     }
 }
