--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html {
 }
   
 body {
-    box-shadow: 5px 5px 5px #000000, -5px -5px 5px #000000;
+    box-shadow: 7px 7px 10px #000000, -7px -7px 10px #000000;
     width: 500px;
     height: 510px;
     margin-top: 50px;
@@ -25,13 +25,23 @@ h1 {
     margin-bottom: 30px;
 }
 
-ul li {
-    border-style: solid;
-    border-color: black;
+button {
+        background-color: white;
+        padding: 16px;
+        font-size: 16px;
+        border-style: solid;
+        border-color: black;
+        font-family: "Courier New", Courier, monospace;
+        font-weight: bold;
+        border-radius: 5px;
+        padding: 15px;
+        margin: 20px;
+        width: 350px;
 }
 
-a {
-    text-decoration: none;
+button:hover {
+    background-color: black;
+    color: white;
 }
 
 @media only screen and (max-width: 480px) {
