--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html {
 }
   
 body {
-    box-shadow: 7px 7px 10px #000000, -7px -7px 10px #000000;
+    box-shadow: 5px 5px 5px #000000, -5px -5px 5px #000000;
     width: 500px;
     height: 510px;
     margin-top: 50px;
@@ -53,9 +53,14 @@ button:hover {
         border: none;
         box-shadow: none;
         text-align: left;
-        margin: auto;
+        margin: 30px;
+        padding: 0px;
     }
 
     h1 {
+        margin-left: 0px;
+        width: 300px;
+        font-size: 2.5em;
         line-height: 110%;
     }
+}
