--- a/FittingAllCSS.css
+++ b/FittingAllCSS.css
@@ -37,6 +37,7 @@
 @media only screen and (max-width: 480px) {
 
     .dropDown {
+        margin-top: 20px;
         font-size: 1em;
         margin-left: 0;
     }
@@ -52,6 +53,7 @@
     #ansButton {
         width: 300px;
         margin-left: 0;
+        margin-top: 30px;
     }
 
     #functAns {
